--- a/DOM/index.html
+++ b/DOM/index.html
@@ -3,44 +3,36 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Exercices</title>
-    <link rel="stylesheet" href="styles.css">
+    <title>Page Interactive</title>
 </head>
 <body>
-    <div id="exercice1">
-        <h2>Exercice 1</h2>
-        <p id="colorParagraph">Clique moi!</p>
-    </div>
+    <h1 id="title">Titre Principal</h1>
 
-    <div id="exercice2">
-        <h2>Exercice 2</h2>
-        <p id="hoverText">Survole moi!</p>
-    </div>
+    <div class="secondTitle">Survolez-moi</div>
+    <div class="secondTitle">Survolez-moi</div>
+    <div class="secondTitle">Survolez-moi</div>
 
-    <div id="exercice3">
-        <h2>Exercice 3</h2>
-        <input type="text" id="inputText">
-        <p id="outputText"></p>
-    </div>
+    <div class="title_heading_article">Titre de section</div>
 
-    <div id="exercice4">
-        <h2>Exercice 4</h2>
+    <input type="text" id="barfoo" placeholder="Écrivez ici">
+
+    <ul id="liste"></ul>
+
+    <div>
         <input type="text" id="textInput" maxlength="50">
         <p id="charCounter">0/50 caractères</p>
+        <p id="charList"></p>
     </div>
 
-    <div id="exercice5">
-        <h2>Exercice 5</h2>
+    <div>
         <button id="counterBtn">Incrémenter</button>
-        <div id="counterDisplay">0</div>
+        <p id="counterDisplay">0</p>
     </div>
 
-    <div id="exercice6">
-        <h2>Exercice 6</h2>
-        <div id="gameZone"></div>
+    <div class="draggable" draggable="true"></div>
+    <div class="dropzone">
+        <p>Zone de dépôt</p>
         <p>Score: <span id="score">0</span></p>
     </div>
-
-    <script src="Untitled-2.js"></script>
 </body>
 </html>
